--- a/Nest_Count_estimations_Wermon.Rmd
+++ b/Nest_Count_estimations_Wermon.Rmd
@@ -560,7 +560,7 @@ p.W.predicted.var.2006 <- ggplot() +
         text = element_text(size = 12))
 
 if (save.fig) ggsave(filename = 'figures/W_predicted_var_2006.png', 
-                     plot = p.W.predicted.var.2004,
+                     plot = p.W.predicted.var.2006,
                      dpi = 600, height = 6, 
                      width = 8, units = "in")
 p.W.predicted.var.2006
@@ -595,7 +595,381 @@ Xs.stats.2006$mean_X <- summary.zm.W_2006$statistics[grep(pattern = "X[/[]",
 <!-- p.W.predicted.var.2006 -->
 <!-- ``` -->
 
-Because using the "2006" data and the two-tau one-theta model minizes the credible intervals among all the datasets and models, I decided to use this combination for filling in the missing data. 
+I also looked at potential improvements in model fit if I included May as one of low number months. The following does the excatly the same series of analyses as before but adding one more month into the low-count months.
+
+```{r}
+load("RData/SSAR1_month_W_all_v2_2018-06-12.RData")
+
+zm.W_all_v2 <- results.Warmon_SSAR1_month_all$zm
+Xs.stats.v2 <- results.Warmon_SSAR1_month_all$Xs.stats
+ys.stats.v2 <- results.Warmon_SSAR1_month_all$ys.stats
+```
+
+Confirm the model is still the same. Note that there is m[t] == 5 in the variance term. The comment was not updated... 
+
+```{r}
+results.Warmon_SSAR1_month_all$jm
+```
+
+And the data:
+```{r}
+results.Warmon_SSAR1_month_all$bugs.data
+```
+
+Gelman diagnostic:
+
+```{r}
+results.Warmon_SSAR1_month_all$g.diag
+```
+
+Convergence seemed to reach fine. Posterior traces. 
+
+```{r}
+mcmc_trace(zm.W_all_v2, c("sigma.pro1", "sigma.pro2",
+                    "theta", "sigma.obs"))
+```
+
+Again, sigma.obs doesn't look so good.
+
+And the density plots.
+
+```{r}
+mcmc_dens(zm.W_all_v2, c("sigma.pro1", "sigma.pro2",
+                   "theta", "sigma.obs"))
+```
+
+sigma.pro1, SD for the low count months (March, April, September, and October), is smaller than when the entire data were used (mean = ```r signif(results.Warmon_SSAR1_month_all$summary.zm$statistics['sigma.pro1',1], digits = 3)``` and SD = ```r signif(results.Warmon_SSAR1_month_all$summary.zm$statistics['sigma.pro1', 2], digits = 3)```). The posterior for the SD of observation model (sigma.obs) looks okay (mean = ```r signif(results.Warmon_SSAR1_month_all$summary.zm$statistics['sigma.obs',1], digits = 3)``` and SD = ```r signif(results.Warmon_SSAR1_month_all$summary.zm$statistics['sigma.obs', 2], digits = 3)```)  
+
+Predictions series look like this.
+
+```{r}
+p.W.predicted.var.v2 <- ggplot() +
+  #geom_point(data = ys.stats,
+  #           aes(x = time, y = mode_y), color = "blue") +
+  #geom_line(data = Xs.stats,
+  #          aes(x = time, y = mode_X), color = 'blue') +
+  geom_line(data = Xs.stats.v2,
+            aes(x = time, y = high_X), color = "red",
+            linetype = 2) +
+  geom_line(data = Xs.stats.v2,
+            aes(x = time, y = low_X), color = "red",
+            linetype = 2) +
+  geom_point(data = Xs.stats.v2,
+             aes(x = time, y = median_X), color = "red",
+             alpha = 0.5) +
+  geom_line(data = Xs.stats.v2,
+            aes(x = time, y = median_X), color = "red",
+            alpha = 0.5) +
+  geom_point(data = ys.stats.v2,
+             aes(x = time, y = obsY), color = "green",
+             alpha = 0.5)+
+  geom_line(data = ys.stats.v2,
+             aes(x = time, y = obsY), color = "green",
+             alpha = 0.5) + 
+  labs(x = '', y = '# nests', title = "Wermon")  +
+  theme(axis.text = element_text(size = 12),
+        text = element_text(size = 12))
+
+if (save.fig) ggsave(filename = 'figures/W_predicted_var_all_v2.png', 
+                     plot = p.W.predicted.var.v2,
+                     dpi = 600, height = 6, 
+                     width = 8, units = "in")
+p.W.predicted.var.v2
+```
+
+```{r}
+dif.Xy_v2 <- sum((na.omit(Xs.stats.v2$median_X - ys.stats.v2$obsY))^2)
+dif.Xy_v2
+```
+
+This looks like what it was before - not much difference?
+
+I also tried the two-theta two-tau model.
+
+```{r}
+#rm(list = c("results.Warmon_SSAR1_month_all"))
+load("RData/SSAR1_month_W_var_theta_all_v2_2018-06-12.RData")
+zm.W_all2_v2 <- results.W_SSAR1_month_var_theta$zm
+Xs.stats.W_all2_v2 <- results.W_SSAR1_month_var_theta$Xs.stats
+ys.stats.W_all2_v2 <- results.W_SSAR1_month_var_theta$ys.stats
+# Gelman-diagnostic seems okay.
+#results.Warmon_SSAR1_month_To2013$g.diag
+```
+
+In addition to the two taus as in the previous model, it has two "slope" parameters: one (theta.1) is for May, June, November, and December (increasing months) and the other (theta.2) is for the rest.  
+
+The JAGS model is the following:
+
+```{r}
+results.W_SSAR1_month_var_theta$jm
+```
+
+And data are here:
+
+```{r}
+results.W_SSAR1_month_var_theta$bugs.data
+```
+
+Gelman diagnostic for convergence checking:
+```{r}
+results.W_SSAR1_month_var_theta$g.diag
+```
+
+The posterior densities look like the following:
+
+```{r}
+mcmc_dens(zm.W_all2_v2, c("sigma.pro1", "sigma.pro2", 
+                  "theta.1", "theta.2", "mu", "sigma.obs"))
+```
+
+As they were in the previous model, the standard deviation of the lower count months is a lot smaller (mean = ```r signif(results.W_SSAR1_month_var_theta$summary.zm$statistics['sigma.pro1',1], digits = 3)```, SD = ```r signif(results.W_SSAR1_month_var_theta$summary.zm$statistics['sigma.pro1',2], digits = 3)```) than the other (mean = ```r signif(results.W_SSAR1_month_var_theta$summary.zm$statistics['sigma.pro2',1], digits = 3)```, SD = ```r signif(results.W_SSAR1_month_var_theta$summary.zm$statistics['sigma.pro2', 2], digits = 3)```). The theta parameters, however, looked like they overlapped (theta.1: mean = ```r signif(results.W_SSAR1_month_var_theta$summary.zm$statistics['theta.1', 1], digits = 3)```, SD = ```r signif(results.W_SSAR1_month_var_theta$summary.zm$statistics['theta.1', 2], digits = 3)```, theta.2: mean = ```r signif(results.W_SSAR1_month_var_theta$summary.zm$statistics['theta.2', 1], digits = 3)```, SD = ```r signif(results.W_SSAR1_month_var_theta$summary.zm$statistics['theta.2', 2], digits = 3)```).  As it was in the previous model, sigma.obs did not look like it converged as well as for the other parameters (mean = ```r signif(results.W_SSAR1_month_var_theta$summary.zm$statistics['sigma.obs',1], digits = 3)```, SD = ```r signif(results.W_SSAR1_month_var_theta$summary.zm$statistics['sigma.obs',2], digits = 3)```), which had a long tail and not-so-smooth posterior. 
+
+Trace plots of these parameters look like the following.
+
+```{r}
+mcmc_trace(zm.W_all2_v2, c("sigma.pro1", "sigma.pro2", 
+                  "theta.1", "theta.2", "mu", "sigma.obs"))
+```
+
+
+Look at the series including the predicted ones. 
+```{r}
+p.W.predicted.var.theta_v2 <- ggplot() +
+  #geom_point(data = ys.stats,
+  #           aes(x = time, y = mode_y), color = "blue") +
+  #geom_line(data = Xs.stats,
+  #          aes(x = time, y = mode_X), color = 'blue') +
+  geom_line(data = Xs.stats.W_all2_v2,
+            aes(x = time, y = high_X), color = "red",
+            linetype = 2) +
+  geom_line(data = Xs.stats.W_all2_v2,
+            aes(x = time, y = low_X), color = "red",
+            linetype = 2) +
+  geom_point(data = Xs.stats.W_all2_v2,
+             aes(x = time, y = median_X), color = "red",
+             alpha = 0.5) +
+  geom_line(data = Xs.stats.W_all2_v2,
+            aes(x = time, y = median_X), color = "red",
+            alpha = 0.5) +
+  geom_point(data = ys.stats.W_all2_v2,
+             aes(x = time, y = obsY), color = "green",
+             alpha = 0.5)+
+  geom_line(data = ys.stats.W_all2_v2,
+             aes(x = time, y = obsY), color = "green",
+             alpha = 0.5) + 
+  labs(x = '', y = '# nests', title = "Wermon")  +
+  theme(axis.text = element_text(size = 12),
+        text = element_text(size = 12))
+
+if (save.fig) ggsave(filename = 'figures/W_predicted_var_theta_v2.png', 
+                     plot = p.W.predicted.var.theta_v2,
+                     dpi = 600, height = 6, 
+                     width = 8, units = "in")
+p.W.predicted.var.theta_v2
+
+
+```
+
+Results don't look any different from before... but the credible intervals seem to be wider for 2014 - 2016. 
+
+```{r}
+dif.Xy_all2_v2 <- sum((na.omit(Xs.stats.W_all2_v2$median_X -
+                                 ys.stats.W_all2_v2$obsY))^2)
+dif.Xy_all2_v2
+```
+
+The sum of squared differences between observed and predicted is ```r signif(dif.Xy_all2_v2, digits = 3)``` where there were ```r length(na.omit(Xs.stats.W_all2_v2$median_X - ys.stats.W_all2_v2$obsY))``` data points. This was larger than from the previous model. So, the first model seemed to be better than this one using that metric. 
+
+Next, I looked at whether or not the first few large data points and many missing data points may be affecting the predictions at later years. So, I took out before 2004 and see how that fits. I used the one-theta model.
+
+```{r}
+#rm(list = c("results.W_SSAR1_month_var_theta"))
+load("RData/SSAR1_month_W_2004_v2_2018-06-12.RData")
+
+zm.W_2004_v2 <- results.Warmon_SSAR1_month_2004$zm
+Xs.stats.2004_v2 <- results.Warmon_SSAR1_month_2004$Xs.stats
+ys.stats.2004_v2 <- results.Warmon_SSAR1_month_2004$ys.stats
+```
+
+Confirm the model is still the same.
+
+```{r}
+results.Warmon_SSAR1_month_2004$jm
+```
+
+And the data:
+```{r}
+results.Warmon_SSAR1_month_2004$bugs.data
+```
+
+
+Gelman diagnostic:
+
+```{r}
+results.Warmon_SSAR1_month_2004$g.diag
+```
+
+According to the Gelman diagnostic, convergence was reached for these parameters. 
+
+Posterior densities of the model parameters:
+
+```{r}
+mcmc_trace(zm.W_2004_v2, c("sigma.pro1", "sigma.pro2",
+                    "theta", "sigma.obs"))
+```
+
+And the density plots.
+
+```{r}
+mcmc_dens(zm.W_2004_v2, c("sigma.pro1", "sigma.pro2",
+                   "theta", "sigma.obs"))
+```
+
+sigma.pro1, SD for the low count months (March, April, September, and October), did not converge well and was smaller than when the entire data were used (mean = ```r signif(results.Warmon_SSAR1_month_2004$summary.zm$statistics['sigma.pro1',1], digits = 3)``` and SD = ```r signif(results.Warmon_SSAR1_month_2004$summary.zm$statistics['sigma.pro1', 2], digits = 3)```). The posterior for the SD of observation model (sigma.obs) looks a lot better than the previous models and the distribution is over larger values (mean = ```r signif(results.Warmon_SSAR1_month_2004$summary.zm$statistics['sigma.obs',1], digits = 3)``` and SD = ```r signif(results.Warmon_SSAR1_month_2004$summary.zm$statistics['sigma.obs', 2], digits = 3)```)  
+
+Predictions series look like this.
+
+```{r}
+p.W.predicted.var.2004_v2 <- ggplot() +
+  #geom_point(data = ys.stats,
+  #           aes(x = time, y = mode_y), color = "blue") +
+  #geom_line(data = Xs.stats,
+  #          aes(x = time, y = mode_X), color = 'blue') +
+  geom_line(data = Xs.stats.2004_v2,
+            aes(x = time, y = high_X), color = "red",
+            linetype = 2) +
+  geom_line(data = Xs.stats.2004_v2,
+            aes(x = time, y = low_X), color = "red",
+            linetype = 2) +
+  geom_point(data = Xs.stats.2004_v2,
+             aes(x = time, y = median_X), color = "red",
+             alpha = 0.5) +
+  geom_line(data = Xs.stats.2004_v2,
+            aes(x = time, y = median_X), color = "red",
+            alpha = 0.5) +
+  geom_point(data = ys.stats.2004_v2,
+             aes(x = time, y = obsY), color = "green",
+             alpha = 0.5)+
+  geom_line(data = ys.stats.2004_v2,
+             aes(x = time, y = obsY), color = "green",
+             alpha = 0.5) + 
+  labs(x = '', y = '# nests', title = "Wermon")  +
+  theme(axis.text = element_text(size = 12),
+        text = element_text(size = 12))
+
+if (save.fig) ggsave(filename = 'figures/W_predicted_var_2004_v2.png', 
+                     plot = p.W.predicted.var.2004_v2,
+                     dpi = 600, height = 6, 
+                     width = 8, units = "in")
+p.W.predicted.var.2004_v2
+```
+
+The crediblel intervals for the missing data in 2014 and 2015 look better than the last run. But... I don't understand why the median of predicted values don't match the observed in this case... are they skewed distributions? So, the means may match with the observed? I think the reason is that the posterior on sigma.obs is a lot bigger than before. 
+
+```{r}
+dif.Xy_2004_v2 <- sum((na.omit(Xs.stats.2004_v2$median_X - ys.stats.2004_v2$obsY))^2)
+dif.Xy_2004_v2
+```
+
+The squared sum of differences between observed and predicted is ```r signif(dif.Xy_2004_v2, digits = 3)``` where there were ```r length(na.omit(Xs.stats.2004_v2$median_X - ys.stats.2004_v2$obsY))``` data points. This was larger than from the previous models. So, the first model seemed to be better than this one using that metric. 
+
+
+Now, how about including starting from 2006?
+```{r}
+load("RData/SSAR1_month_W_2006_v2_2018-06-12.RData")
+
+zm.W_2006_v2 <- results.Warmon_SSAR1_month_2006$zm
+Xs.stats.2006_v2 <- results.Warmon_SSAR1_month_2006$Xs.stats
+ys.stats.2006_v2 <- results.Warmon_SSAR1_month_2006$ys.stats
+```
+
+Confirm the model is still the same.
+
+```{r}
+results.Warmon_SSAR1_month_2006$jm
+```
+
+And the data:
+```{r}
+results.Warmon_SSAR1_month_2006$bugs.data
+```
+
+Gelman diagnostic:
+
+```{r}
+results.Warmon_SSAR1_month_2006$g.diag
+```
+
+Convergence seemed to reach fine. Posterior traces. 
+
+```{r}
+mcmc_trace(zm.W_2006_v2, c("sigma.pro1", "sigma.pro2",
+                    "theta", "sigma.obs"))
+```
+
+
+And the density plots.
+
+```{r}
+mcmc_dens(zm.W_2006_v2, c("sigma.pro1", "sigma.pro2",
+                   "theta", "sigma.obs"))
+```
+
+sigma.pro1, SD for the low count months (March, April, September, and October), is smaller than when the entire data were used (mean = ```r signif(results.Warmon_SSAR1_month_2006$summary.zm$statistics['sigma.pro1',1], digits = 3)``` and SD = ```r signif(results.Warmon_SSAR1_month_2006$summary.zm$statistics['sigma.pro1', 2], digits = 3)```). The posterior for the SD of observation model (sigma.obs) looks okay (mean = ```r signif(results.Warmon_SSAR1_month_2006$summary.zm$statistics['sigma.obs',1], digits = 3)``` and SD = ```r signif(results.Warmon_SSAR1_month_2006$summary.zm$statistics['sigma.obs', 2], digits = 3)```)  
+
+Predictions series look like this.
+
+```{r}
+p.W.predicted.var.2006_v2 <- ggplot() +
+  #geom_point(data = ys.stats,
+  #           aes(x = time, y = mode_y), color = "blue") +
+  #geom_line(data = Xs.stats,
+  #          aes(x = time, y = mode_X), color = 'blue') +
+  geom_line(data = Xs.stats.2006_v2,
+            aes(x = time, y = high_X), color = "red",
+            linetype = 2) +
+  geom_line(data = Xs.stats.2006_v2,
+            aes(x = time, y = low_X), color = "red",
+            linetype = 2) +
+  geom_point(data = Xs.stats.2006_v2,
+             aes(x = time, y = median_X), color = "red",
+             alpha = 0.5) +
+  geom_line(data = Xs.stats.2006_v2,
+            aes(x = time, y = median_X), color = "red",
+            alpha = 0.5) +
+  geom_point(data = ys.stats.2006_v2,
+             aes(x = time, y = obsY), color = "green",
+             alpha = 0.5)+
+  geom_line(data = ys.stats.2006_v2,
+             aes(x = time, y = obsY), color = "green",
+             alpha = 0.5) + 
+  labs(x = '', y = '# nests', title = "Wermon")  +
+  theme(axis.text = element_text(size = 12),
+        text = element_text(size = 12))
+
+if (save.fig) ggsave(filename = 'figures/W_predicted_var_2006_v2.png', 
+                     plot = p.W.predicted.var.2006_v2,
+                     dpi = 600, height = 6, 
+                     width = 8, units = "in")
+p.W.predicted.var.2006_v2
+```
+
+```{r}
+dif.Xy_2006_v2 <- sum((na.omit(Xs.stats.2006_v2$median_X - 
+                                 ys.stats.2006_v2$obsY))^2)
+dif.Xy_2006_v2
+```
+
+The squared sum of differences between observed and predicted is ```r signif(dif.Xy_2006_v2, digits = 3)``` where there were ```r length(na.omit(Xs.stats.2006_v2$median_X - ys.stats.2006_v2$obsY))``` data points. This was larger than from the previous model. So, the first model seemed to be better than this one using that metric. The crediblel intervals for the missing data, however, look better than the last run. 
+
+```{r}
+summary.zm.W_2006_v2 <- results.Warmon_SSAR1_month_2006$summary.zm
+Xs.stats.2006_v2$mean_X <- summary.zm.W_2006_v2$statistics[grep(pattern = "X[/[]", 
+                                     row.names(summary.zm.W_2006_v2$statistics)), 
+                                "Mean"]
+```
+
+Because using the "2006" data and the two-tau one-theta model without May in the low-count months minizes the credible intervals among all the datasets and models, I decided to use this combination for filling in the missing data. 
 
 ```{r}
 # sum posterior samples to get annual counts from monthly estimates:
